src/test/ui/never-impl-is-reserved.stderr
error[E0119]: conflicting implementations of trait `MyTrait` for type `MyFoo`:
  --> $DIR/never-impl-is-reserved.rs:10:1
   |
LL | impl MyTrait for MyFoo {}
   | ---------------------- first implementation here
LL | // This will conflict with the first impl if we impl `for<T> T: From<!>`.
LL | impl<T> MyTrait for T where T: From<!> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `MyFoo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
